--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
   <title> Test App </title>
   <style>
     body {
-      background-color: #FFD700;
+      background-color: #f2f2f2;
       font-family: Arial, sans-serif;
       text-align: center;
     }
 
     h1 {
-      color: #333333;
-      font-size: 24px;
+      color: 	#000080;
+      font-size: 30px;
       margin-top: 150px;
     }
   </style>
