--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -18,6 +17,6 @@
   </style>
 </head>
 <body>
-  <h1>Welcome to the DevOps World </h1>
+  <h1>Welcome to the DevOps World🎈 </h1>
 </body>
 </html>
