--- a/index.html
+++ b/index.html
@@ -1,22 +1,39 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title> Test App </title>
-  <style>
-    body {
-      background-color: #f2f2f2;
-      font-family: Arial, sans-serif;
-      text-align: center;
-    }
+  <head>
+    <title>Test App</title>
+    <style>
+      body {
+        background-color: #f2f2f2;
+        font-family: Arial, sans-serif;
+        text-align: center;
+      }
 
-    h1 {
-      color: 	#000080;
-      font-size: 30px;
-      margin-top: 150px;
-    }
-  </style>
-</head>
-<body>
-  <h1>Welcome to the DevOps World🎈 </h1>
-</body>
+      h1 {
+        color: #000080;
+        font-size: 30px;
+        margin-top: 150px;
+      }
+
+      .container {
+        background-color: white;
+        width: 80%;
+        margin: 0 auto;
+        padding: 20px;
+        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+      }
+
+      button {
+        font-size: 16px;
+        padding: 10px 20px;
+        cursor: pointer;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="container">
+      <h1>Welcome !!!</h1>
+      <button onclick="location.href='https://github.com/GudditiOrg/Shellscript'">Get this code from GitHub</button>
+    </div>
+  </body>
 </html>
